# Depth-onnx-Ae

./: .gitignore  AdobePlugin.just  Cargo.toml  LICENSE  README.ja.md  README.md  _install_mediacore.bat
crates/depth-onnx-ae/: Cargo.toml  Justfile  build.rs
crates/depth-onnx-ae/.cargo/: config.toml
crates/depth-onnx-ae/src/: lib.rs  render.rs  state.rs
crates/depth-onnx-core/: Cargo.toml  build.rs
crates/depth-onnx-core/src/: engine.rs  lib.rs  manifest.rs  ort_loader.rs  preprocess.rs  registry.rs
docs/: bench_results.json  benchmark.md  design.md
model/: README.md
model/depth_anything_v2_small/: manifest.json
scripts/: bench_resolutions.py  export_fp16.py  export_onnx.py  infer_reference.py  install_dev.bat  install_dev.sh  requirements.txt  setup_models.sh
