[package]
name = "depthonnxae"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "depthonnxae"
crate-type = ["cdylib"]

[dependencies]
after-effects = "0.4.0"
depth-onnx-core = { path = "../depth-onnx-core" }
log = "0.4"
once_cell = "1"
parking_lot = "0.12"
bincode = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
rfd = "0.15"

[build-dependencies]
pipl = "0.1.1"
